# OJ-API

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.prebuilt  Dockerfile.sandbox  Dockerfile.sandbox.prebuilt  GRPC_ARCHITECTURE.md  K8S_DEPLOYMENT.md  K8S_MULTI_POD_ARCHITECTURE.md  K8S_SANDBOX_ID_FIX.md  Makefile  README  README.md  SANDBOX_GRPC_README.md  docker-compose.yml  example.sh  generate_proto.sh  go.mod  go.sum  k6_test.js  main  main.go  myapp  start_sandboxes.sh  stop_sandboxes.sh  test_runner.sh
OJ-API/: bruno.json
config/: config.go  config_test.go
database/: connect.go
docs/: docs.go  swagger.json  swagger.yaml
example/: ce.cpp  outtest.cpp  timetest.cpp
gitclone/: clone.go
handlers/: admin.go  auth.go  exam.go  gitea.go  handlers_test.go  questions.go  responseHTTP.go  routes.go  sandbox.go  score.go  user.go  webhook.go
k8s/: api-deployment.yaml  api-service-headless.yaml  api-service.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pgbouncer-deployment.yaml  sandbox-deployment.yaml  sandbox-service.yaml  secret.yaml
models/: announcement.go  contextKey.go  exam.go  examAndUser.go  examQuestion.go  models_test.go  question.go  questionTestData.go  questionTestScript.go  sandbox.go  score.go  tag.go  tagAndQuestion.go  user.go  userQuestionRelation.go  userQuestionTable.go
proto/: sandbox.pb.go  (+2 more)
sandbox/grp_parser/: .gitignore  CMakeLists.txt  JsonParser.cpp  JsonParser.hpp  go.mod  grp_parser.cpp  main.go
sandbox/grp_parser/example/: message.txt  score.json  score_test.json  ut_all.json  ut_test.json
(+33 files in other folders)
